# IEEEGumstix

./: CMakeLists.txt  FindOpenCV.cmake
include/ieee/controls/: Angle.h  DriveEquation.h  PositionController.h  PositionFilter.h  Vec2D.h
include/ieee/drivers/: CompassDriver.h  Image.h  LaserPlot.h  LaserSensor.h  LaserSensorDebug.h  LaserTrack.h  MouseSensor.h  SerialPackets.h  SerialPort.h  SerialPortBuf.h  SonarDriver.h  V4LCapture.h  WheelsDriver.h  XMegaComm.h
include/ieee/drivers/avr/: AVRComm.h  AVRRobot.h  CompassDriver.h  CompassSensor.h  SerialPackets.h  SerialPortBuf.h  SonarDriver.h  SonarSensor.h  StepperControl.h  WheelsControl.h  WheelsDriver.h  XMegaComm.h
include/ieee/drivers/laser/: Image.h  LaserMapper.h  LaserPlot.h  LaserSensor.h  LaserTrack.h  V4LCapture.h
include/ieee/planner/: AStarSearch.h  CameraSensorPredictor.h  LaserSensorPredictor.h  Node.h  NodeGrid.h  RoomPlanner.h  RouteEvaluator.h  SensorPredictor.h  SensorPredictorCache.h  TelepathicSensorPredictor.h
include/ieee/shared/: Timer.h  WorldGrid.h  types.h
include/ieee/sim/: GridPanelLayer.h  ObjectPanelLayer.h  Robot.h  RobotPanelLayer.h  RoomSimApp.h  RoomSimFrame.h  SimFrame.h  VictimWorldObject.h  World.h  WorldPanel.h
include/ieee/sim/comm/: CommApp.h  CommFrame.h  CommWorkerThread.h  DriveTabPanel.h  DumpTabPanel.h  SensorsTabPanel.h  TabPanel.h  WheelTabPanel.h  WheelWidget.h
include/ieee/sim/control/: ControlTestApp.h  ControlTestFrame.h  PositionControllerLayer.h
include/ieee/sim/laser/: LaserCalibratePanel.h  LaserImagePanel.h  LaserPanelLayer.h  LaserSimApp.h  LaserSimFrame.h  LaserSimWorkerThread.h
include/ieee/sim/room/: NodeGridPanelLayer.h  Robot.h  RobotPanelLayer.h  RoomSimApp.h  RoomSimFrame.h  RoomSimSettingsDialog.h
include/ieee/sim/shared/: ConfigLoader.h  GridPanelLayer.h  ImagePanel.h  ObjectPanelLayer.h  ObstacleWorldObject.h  VictimWorldObject.h  World.h  WorldIO.h  WorldObject.h  WorldPanel.h  WorldPanelLayer.h
include/ieeepath/drivers/: MouseSensor.h  V4LCapture.h
include/ieeepath/planner/: AStarSearch.h  CameraSensorPredictor.h  Node.h  NodeGrid.h  RoomPlanner.h  RouteEvaluator.h  RoutePlanner.h  SensorPredictor.h  SensorPredictorCache.h  TelepathicSensorPredictor.h
include/ieeepath/shared/: ObstacleWorldObject.h  Timer.h  VictimWorldObject.h  WorldGrid.h  WorldObject.h  types.h
include/ieeepath/sim/: Robot.h  RoomSimApp.h  SimFrame.h  VictimWorldObject.h  World.h  WorldObject.h  WorldPanel.h
include/ieeepath/vision/: V4LCapture.h
misc/: IconLib.cmake  controltest.desktop.in  ieee.directory  ieeecomm.desktop.in  lasersim.desktop.in  roomsim.desktop.in
misc/config/: control.info  laser.info  robot.info
octave/: .gitignore  magcal.m
src/: AStarSearch.cpp  AStarSearch.h  ObstacleWorldObject.cpp  ObstacleWorldObject.h  Robot.cpp  Robot.h  RoomGrid.cpp  RoomGrid.h  RoomSimApp.cpp  RoomSimApp.h  RoutePlanner.cpp  RoutePlanner.h  SimFrame.cpp  SimFrame.h  VictimWorldObject.cpp  VictimWorldObject.h  World.cpp  World.h  WorldGrid.cpp  WorldGrid.h  WorldObject.h  WorldPanel.cpp  WorldPanel.h  main.cpp  util.cpp  util.h
src/controls/: Angle.cpp  CMakeLists.txt  DriveEquation.cpp  PositionController.cpp  PositionFilter.cpp
src/drivers/: CMakeLists.txt  CompassDriver.cpp  Image.cpp  LaserPlot.cpp  LaserSensor.cpp  LaserTrack.cpp  MouseSensor.cpp  SerialPort.cpp  SerialPortBuf.cpp  SonarDriver.cpp  V4LCapture.cpp  WheelsDriver.cpp  XMegaComm.cpp  capturetest.cpp  lasertest.cpp  lasertest2.cpp  mousetest.cpp  serialtest.cpp
src/drivers/avr/: AVRComm.cpp  AVRRobot.cpp  CompassDriver.cpp  CompassSensor.cpp  SerialPort.cpp  SerialPortBuf.cpp  SonarDriver.cpp  SonarSensor.cpp  StepperControl.cpp  WheelsControl.cpp  WheelsDriver.cpp  XMegaComm.cpp
src/drivers/laser/: Image.cpp  LaserMapper.cpp  LaserPlot.cpp  LaserSensor.cpp  LaserTrack.cpp  V4LCapture.cpp
src/planner/: AStarSearch.cpp  AStarSearch.h  CMakeLists.txt  CameraSensorPredictor.cpp  CameraSensorPredictor.h  LaserSensorPredictor.cpp  Node.cpp  NodeGrid.cpp  RoomPlanner.cpp  RouteEvaluator.cpp  RoutePlanner.cpp  RoutePlanner.h  SensorPredictor.h  SensorPredictorCache.cpp  TelepathicSensorPredictor.cpp
src/shared/: CMakeLists.txt  ObstacleWorldObject.cpp  ObstacleWorldObject.h  Timer.cpp  VictimWorldObject.cpp  VictimWorldObject.h  WorldGrid.cpp  WorldGrid.h  WorldObject.h  types.cpp  types.h
src/sim/: CMakeLists.txt  GridPanelLayer.cpp  ObjectPanelLayer.cpp  ObstacleWorldObject.cpp  Robot.cpp  Robot.h  RobotPanelLayer.cpp  RoomSimApp.cpp  RoomSimApp.h  RoomSimFrame.cpp  SimFrame.cpp  SimFrame.h  TelepathicSensorPredictor.cpp  TelepathicSensorPredictor.h  VictimWorldObject.cpp  VictimWorldObject.h  World.cpp  World.h  WorldPanel.cpp  WorldPanel.h  WorldPanelLayer.cpp
src/sim/comm/: CMakeLists.txt  CommApp.cpp  CommFrame.cpp  CommWorkerThread.cpp  DriveTabPanel.cpp  DumpTabPanel.cpp  SensorsTabPanel.cpp  WheelTabPanel.cpp  WheelWidget.cpp
src/sim/control/: CMakeLists.txt  ControlTestApp.cpp  ControlTestFrame.cpp  PositionControllerLayer.cpp
src/sim/laser/: CMakeLists.txt  LaserCalibratePanel.cpp  LaserImagePanel.cpp  LaserPanelLayer.cpp  LaserSimApp.cpp  LaserSimFrame.cpp  LaserSimWorkerThread.cpp
src/sim/magcal/: CMakeLists.txt  magcal.cpp
src/sim/room/: CMakeLists.txt  NodeGridPanelLayer.cpp  Robot.cpp  RobotPanelLayer.cpp  RoomSimApp.cpp  RoomSimFrame.cpp  RoomSimSettingsDialog.cpp
src/sim/shared/: CMakeLists.txt  ConfigLoader.cpp  GridPanelLayer.cpp  ImagePanel.cpp  ObjectPanelLayer.cpp  ObstacleWorldObject.cpp  VictimWorldObject.cpp  World.cpp  WorldIO.cpp  WorldPanel.cpp  WorldPanelLayer.cpp
src/util/: WorldGrid.cpp  WorldGrid.h  types.cpp  types.h
src/vision/: CMakeLists.txt  V4LCapture.cpp  main.cpp
user.collection/recipes/ieeegumstix/: ieeegumstix-local.bb  ieeegumstix.bb  ieeegumstix.inc
user.collection/recipes/ieeegumstix/files/: OpenCVConfig.cmake
user.collection/recipes/images/: ieee-image.bb
